--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Teaser</title>
+  <title>Real Estate</title>
 
   
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
